#register ok #bug loginform _username NULL

--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,7 +1,9 @@
 <header>
     {% block nav %}
+{{ dump(app) }}
 {{ dump(app.user) }}
 {{ dump(app.session) }}
+{{ dump(app.request) }}
 
         {# NAVBAR #}
         <nav class="navbar navbar-expand-lg navbar-warning bg-warning">
