--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -10,24 +10,27 @@
 
     {# Formulaire de connexion #}
     
-    {{ form_start ( form ) }}
+    {# {{ form_start ( form ) }}
     <div class="container">
         <div class="row">
             <div class="col-6">
-                {{ form_row ( form.username ) }}
+                {{ form_row ( form._username ) }}
             </div>
         </div>
         <div class="row">
             <div class="col-6">
-                {{ form_row ( form.password ) }}
+                {{ form_row ( form._password ) }}
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-6">
-                <button type="submit">Connecter</button>
+            <div class="col-6"> #}
+                {# <button type="submit">Connecter</button> #}
+                {# {{ form_row ( form.submit ) }}
             </div>
         </div>
     </div>
-    {{ form_end ( form ) }}
-    
+    {{ form_end ( form ) }} #}
+
+{{form(form)}}
+
 {% endblock %}
