--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -19,7 +19,7 @@
                 {{ form_row ( form.username ) }}
             </div>
             <div class="col-6">
-                {{ form_row ( form.password ) }}
+                {{ form_row ( form.plainpassword ) }}
             </div>
         </div>
         <div class="row">
@@ -40,7 +40,8 @@
         </div>
         <div class="row text-center">
             <div class="col-6">
-                <button type="submit">Créer votre compte</button>
+                {# <button type="submit">Créer votre compte</button> #}
+                {{ form_row ( form.submit ) }}
             </div>
         </div>
     </div>
