--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,34 +1,102 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="{{ app.request.locale }}">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>{% block title %}DEV my Shirts{% endblock %}</title>
-
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="descripion" content="Boutique e-commerce en ligne de t-shirts originaux basés sur les langages de programmation et de développement.">
-        <meta name="author" content="DEV my Shirts">
-         <!-- Styles -->
-        <link rel="stylesheet" href="{{ asset( 'https://use.fontawesome.com/releases/v5.5.0/css/all.css' ) }}">
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset( 'assets/vendor/style/bootstrap.min.css' ) }}" />
-        <link rel="stylesheet" type="text/css" media="screen" href="{{ asset( 'assets/style/style.min.css' ) }}" />
-        {% block stylesheets %}{% endblock %}
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <title>
+            {% block title %}
+                {% if title is defined %}{{title}}{% else %}Title{% endif %} | Nom du site
+            {% endblock %}
+        </title>
+        {% block stylesheets %}
+            {# bootstrap #}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            {# custom #}
+            <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+        {% endblock %}
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% include 'partials/header.html.twig' %}
+    <body id="{% block body_id %}{% endblock %}">
 
-        {% block body %}{% endblock %}
+        {% block header %}
+            <header id="header" class="bck1 border-bottom">
+                <div class="container">
+                    <h1>{% if title is defined %}{{title}}{% else %}Header{% endif %}</h1>
+                </div>
+            </header>
+        {% endblock %}
 
-        {% include 'partials/footer.html.twig' %}
-        <!-- Liens vers les .JS -->
-        <script src="{{ asset( 'assets/vendor/script/jquery-3.3.1.min.js' ) }}"></script>
-        <script src="{{ asset( 'assets/vendor/script/popper.min.js' ) }}"></script>
-        <script src="{{ asset( 'assets/vendor/script/bootstrap.min.js' ) }}"></script>
-        <script src="{{ asset( 'assets/script/script.js' ) }}"></script>
-        
+        {% block nav %}
+            <nav id="main-nav" class="container navbar navbar-expand-lg navbar-light bg-light border rounded mb-3">
+                <ul class="navbar-nav">
+                    <li class="nav-item {% if mainNavHome is defined %}active{% endif %}">
+                        <a class="nav-link" href="{{path('home')}}">Accueil</a>
+                    </li>
+                    {% if is_granted('ROLE_USER') %}
+                        <li class="nav-item {% if mainNavMember is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('app_member_index')}}">Espace membre</a>
+                        </li>
+                    {% endif %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item {% if mainNavAdmin is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('home')}}">Espace admin</a>
+                        </li>
+                    {% endif %}
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    {% if is_granted('ROLE_USER') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('logout')}}">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item {% if mainNavLogin is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('login')}}">Connexion</a>
+                        </li>
+                        <li class="nav-item {% if mainNavRegistration is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('register')}}">Inscription</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        {% endblock %}
+
+        {% block flash %}
+            {% for flash_message in app.session.flashbag.get('success') %}
+                <div class="container alert alert-success" role="alert">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+            {% for flash_message in app.session.flashbag.get('info') %}
+                <div class="container alert alert-info" role="alert">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+            {% for flash_message in app.session.flashbag.get('warning') %}
+                <div class="container alert alert-warning" role="alert">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+            {% for flash_message in app.session.flashbag.get('danger') %}
+                <div class="container alert alert-danger" role="alert">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+        {% endblock %}
+
+        <div class="container bck1 padded">
+            {% block body %}
+            {% endblock %}
+        </div>
+
+        {% block footer %}
+            <footer id="footer" class="bck1 border-top">
+                <div class="container">
+                    <h4>Footer</h4>
+                </div>
+            </footer>
+        {% endblock %}
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
-
-    
-    
